#35 - added pitest to server project and updated tests to achieve >99% pitest test strength